--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </pattern>
                   
                         <!-- Insert your profile (recommended size: 640 x 940) -->
-                        <image class="home__img" id="imageBlob" width="640" height="925" href="/assets/img/port4.png"/>
+                        <image class="home__img" id="imageBlob" width="640" height="925" href="assets/img/port4.png"/>
                      </defs>
                   </svg>
                </div>
